--- a/.github/workflows/data_collection.yml
+++ b/.github/workflows/data_collection.yml
@@ -5,9 +5,15 @@ on:
     - cron: '0 * * * *'  # Run every hour
   workflow_dispatch:  # Allow manual trigger
 
+# Prevent multiple runs from overlapping
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   collect_data:
     runs-on: ubuntu-latest
+    timeout-minutes: 10  # Timeout after 10 minutes
     permissions:
       contents: read
       issues: write
@@ -52,7 +58,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: collected-data
+        name: collected-data-${{ github.run_number }}-${{ github.run_attempt }}
         path: |
           data/
           *.log
