--- a/.github/workflows/aqi_model_training.yml
+++ b/.github/workflows/aqi_model_training.yml
@@ -10,6 +10,10 @@ on:
     paths:
       - '.github/workflows/aqi_model_training.yml'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   train-model:
     runs-on: ubuntu-latest
@@ -259,8 +263,8 @@ jobs:
         
     - name: Commit model and reports
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         
         # Add model files and reports (force add to override .gitignore)
         git add -f data_repositories/models/
@@ -269,7 +273,8 @@ jobs:
         # Commit with timestamp
         git commit -m "🤖 Model retraining: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" || echo "No changes to commit"
         
-        # Push to repository
+        # Push to repository using GITHUB_TOKEN
+        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
         git push origin main
         
     - name: Create training report
