--- a/.github/workflows/aqi_model_training.yml
+++ b/.github/workflows/aqi_model_training.yml
@@ -47,6 +47,7 @@ jobs:
         import sys
         sys.path.append('.')
         import pandas as pd
+        import os
         from datetime import datetime, timedelta
         import logging
         
@@ -56,19 +57,40 @@ jobs:
         logger.info('🔄 Merging historical and real-time data...')
         
         try:
-            # Load historical data (150+ days)
-            historical_df = pd.read_csv('data_repositories/historical_data/real_historical_dataset.csv')
-            logger.info(f'📦 Loaded historical data: {len(historical_df)} records')
+            # Check if historical data exists
+            historical_file = 'data_repositories/historical_data/real_historical_dataset.csv'
+            realtime_file = 'data_repositories/processed/merged_data.csv'
             
-            # Load recent real-time data
-            realtime_df = pd.read_csv('data_repositories/processed/merged_data.csv')
-            logger.info(f'📡 Loaded real-time data: {len(realtime_df)} records')
-            
-            # Merge datasets
-            combined_df = pd.concat([historical_df, realtime_df], ignore_index=True)
-            
-            # Remove duplicates based on timestamp
-            combined_df = combined_df.drop_duplicates(subset=['timestamp'], keep='last')
+            if not os.path.exists(historical_file):
+                logger.warning(f'⚠️ Historical data file not found: {historical_file}')
+                logger.info('📡 Using only real-time data for training...')
+                
+                # Use only real-time data
+                if os.path.exists(realtime_file):
+                    combined_df = pd.read_csv(realtime_file)
+                    logger.info(f'📡 Loaded real-time data: {len(combined_df)} records')
+                else:
+                    logger.error(f'❌ Real-time data file not found: {realtime_file}')
+                    sys.exit(1)
+            else:
+                # Load historical data (150+ days)
+                historical_df = pd.read_csv(historical_file)
+                logger.info(f'📦 Loaded historical data: {len(historical_df)} records')
+                
+                # Load recent real-time data
+                if os.path.exists(realtime_file):
+                    realtime_df = pd.read_csv(realtime_file)
+                    logger.info(f'📡 Loaded real-time data: {len(realtime_df)} records')
+                    
+                    # Merge datasets
+                    combined_df = pd.concat([historical_df, realtime_df], ignore_index=True)
+                    
+                    # Remove duplicates based on timestamp
+                    combined_df = combined_df.drop_duplicates(subset=['timestamp'], keep='last')
+                else:
+                    logger.warning(f'⚠️ Real-time data file not found: {realtime_file}')
+                    logger.info('📦 Using only historical data for training...')
+                    combined_df = historical_df
             
             # Sort by timestamp
             combined_df['timestamp'] = pd.to_datetime(combined_df['timestamp'])
@@ -77,7 +99,7 @@ jobs:
             # Save combined dataset
             combined_df.to_csv('data_repositories/processed/complete_training_dataset.csv', index=False)
             
-            logger.info(f'✅ Merged dataset: {len(combined_df)} records')
+            logger.info(f'✅ Final dataset: {len(combined_df)} records')
             logger.info(f'📅 Date range: {combined_df[\"timestamp\"].min()} to {combined_df[\"timestamp\"].max()}')
             
         except Exception as e:
@@ -90,6 +112,8 @@ jobs:
         python -c "
         import sys
         sys.path.append('.')
+        import os
+        import pandas as pd
         from phase2_enhanced_feature_engineering import EnhancedFeatureEngineer
         import logging
         
@@ -99,6 +123,24 @@ jobs:
         logger.info('🔧 Starting feature engineering on complete dataset...')
         
         try:
+            # Check if complete training dataset exists
+            training_file = 'data_repositories/processed/complete_training_dataset.csv'
+            
+            if not os.path.exists(training_file):
+                logger.warning(f'⚠️ Complete training dataset not found: {training_file}')
+                logger.info('🔄 Using available merged data for feature engineering...')
+                
+                # Use merged_data.csv if available
+                merged_file = 'data_repositories/processed/merged_data.csv'
+                if os.path.exists(merged_file):
+                    # Copy merged data to the expected location
+                    import shutil
+                    shutil.copy(merged_file, training_file)
+                    logger.info(f'📋 Copied {merged_file} to {training_file}')
+                else:
+                    logger.error('❌ No training data available')
+                    sys.exit(1)
+            
             # Initialize feature engineer
             feature_engineer = EnhancedFeatureEngineer()
             
