--- a/.github/workflows/aqi_model_training.yml
+++ b/.github/workflows/aqi_model_training.yml
@@ -295,10 +295,15 @@ jobs:
             df['timestamp'] = pd.to_datetime(df['timestamp'])
             df = df.sort_values('timestamp')
             
-            # Select features (exclude timestamp and target)
-            feature_cols = [col for col in df.columns if col not in ['timestamp', 'aqi_category']]
-            X = df[feature_cols].select_dtypes(include=[np.number])
-            y = df['aqi_category']
+                         # Select features (exclude timestamp and target)
+             feature_cols = [col for col in df.columns if col not in ['timestamp', 'aqi_category']]
+             X = df[feature_cols].select_dtypes(include=[np.number])
+             y = df['aqi_category']
+             
+             # Clean data - handle NaN and infinite values
+             X = X.fillna(0)  # Replace NaN with 0
+             X = X.replace([np.inf, -np.inf], 0)  # Replace infinite values with 0
+             y = y.fillna(y.median())  # Replace NaN in target with median
             
             logger.info(f'🎯 Training data: {X.shape[0]} samples, {X.shape[1]} features')
             
@@ -349,20 +354,20 @@ jobs:
             with open('deployment/latest_scaler.pkl', 'wb') as f:
                 pickle.dump(scaler, f)
                 
-            # Create evaluation report
-            evaluation_report = {
-                'timestamp': timestamp,
-                'training_date': datetime.now().isoformat(),
-                'model_type': 'LightGBM',
-                'training_samples': len(X_train),
-                'test_samples': len(X_test),
-                'features': len(X.columns),
-                'train_r2_score': train_score,
-                'test_r2_score': test_score,
-                'model_path': model_path,
-                'scaler_path': scaler_path,
-                'feature_importance': dict(zip(X.columns, model.feature_importances_))
-            }
+                         # Create evaluation report
+             evaluation_report = {
+                 'timestamp': timestamp,
+                 'training_date': datetime.now().isoformat(),
+                 'model_type': 'LightGBM',
+                 'training_samples': int(len(X_train)),
+                 'test_samples': int(len(X_test)),
+                 'features': int(len(X.columns)),
+                 'train_r2_score': float(train_score),
+                 'test_r2_score': float(test_score),
+                 'model_path': model_path,
+                 'scaler_path': scaler_path,
+                 'feature_importance': dict(zip(X.columns, [float(x) for x in model.feature_importances_]))
+             }
             
             with open(f'data_repositories/models/evaluation_reports/evaluation_{timestamp}.json', 'w') as f:
                 json.dump(evaluation_report, f, indent=2)
