--- a/.github/workflows/aqi_model_training.yml
+++ b/.github/workflows/aqi_model_training.yml
@@ -217,54 +217,49 @@ jobs:
         
     - name: Feature engineering on complete dataset
       run: |
-        python -c "
-        import sys
-        sys.path.append('.')
-        import os
-        import pandas as pd
-        from phase2_enhanced_feature_engineering import EnhancedFeatureEngineer
-        import logging
-        
-        logging.basicConfig(level=logging.INFO)
-        logger = logging.getLogger(__name__)
-        
-        logger.info('🔧 Starting feature engineering on complete dataset...')
-        
-        try:
-            # Check if complete training dataset exists
-            training_file = 'data_repositories/processed/complete_training_dataset.csv'
-            
-            if not os.path.exists(training_file):
-                logger.warning(f'⚠️ Complete training dataset not found: {training_file}')
-                logger.info('🔄 Using available merged data for feature engineering...')
-                
-                # Use merged_data.csv if available
-                merged_file = 'data_repositories/processed/merged_data.csv'
-                if os.path.exists(merged_file):
-                    # Copy merged data to the expected location
-                    import shutil
-                    shutil.copy(merged_file, training_file)
-                    logger.info(f'📋 Copied {merged_file} to {training_file}')
-                else:
-                    logger.error('❌ No training data available')
-                    sys.exit(1)
-            
-            # Initialize feature engineer
-            feature_engineer = EnhancedFeatureEngineer()
-            
-            # Run feature engineering pipeline
-            success = feature_engineer.run_pipeline()
-            
-            if success:
-                logger.info('✅ Feature engineering completed successfully')
-            else:
-                logger.error('❌ Feature engineering failed')
-                sys.exit(1)
-                
-        except Exception as e:
-            logger.error(f'❌ Feature engineering error: {e}')
-            sys.exit(1)
-        "
+         python -c "
+         import sys
+         sys.path.append('.')
+         import os
+         import pandas as pd
+         import shutil
+         import logging
+         
+         logging.basicConfig(level=logging.INFO)
+         logger = logging.getLogger(__name__)
+         
+         logger.info('🔧 Starting feature engineering on complete dataset...')
+         
+         try:
+             # Check if complete training dataset exists
+             training_file = 'data_repositories/processed/complete_training_dataset.csv'
+             
+             if not os.path.exists(training_file):
+                 logger.error(f'❌ Complete training dataset not found: {training_file}')
+                 sys.exit(1)
+             
+             # Copy complete training dataset to merged_data.csv for feature engineering
+             merged_file = 'data_repositories/processed/merged_data.csv'
+             shutil.copy(training_file, merged_file)
+             logger.info(f'📋 Copied complete training dataset ({training_file}) to {merged_file} for feature engineering')
+             
+             # Initialize feature engineer
+             from phase2_enhanced_feature_engineering import EnhancedFeatureEngineer
+             feature_engineer = EnhancedFeatureEngineer()
+             
+             # Run feature engineering pipeline
+             success = feature_engineer.run_pipeline()
+             
+             if success:
+                 logger.info('✅ Feature engineering completed successfully')
+             else:
+                 logger.error('❌ Feature engineering failed')
+                 sys.exit(1)
+                 
+         except Exception as e:
+             logger.error(f'❌ Feature engineering error: {e}')
+             sys.exit(1)
+         "
         
     - name: Train model with incremental learning
       run: |
