--- a/.github/workflows/aqi_model_training.yml
+++ b/.github/workflows/aqi_model_training.yml
@@ -420,12 +420,15 @@ jobs:
         git add -f data_repositories/models/
         git add -f deployment/
         
-        # Commit with timestamp
-        git commit -m "🤖 Model retraining: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" || echo "No changes to commit"
-        
-        # Push to repository using GITHUB_TOKEN
-        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
-        git push origin main
+                          # Commit with timestamp
+         git commit -m "🤖 Model retraining: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" || echo "No changes to commit"
+         
+         # Pull latest changes before pushing to avoid conflicts
+         git pull origin main --rebase || git pull origin main --allow-unrelated-histories
+         
+         # Push to repository using GITHUB_TOKEN
+         git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+         git push origin main
         
     - name: Create training report
       run: |
