--- a/.github/workflows/aqi_forecasting.yml
+++ b/.github/workflows/aqi_forecasting.yml
@@ -328,6 +328,9 @@ jobs:
         # Commit with timestamp
         git commit -m "🔮 Real-time forecast: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" || echo "No changes to commit"
         
+        # Pull latest changes before pushing to avoid conflicts
+        git pull origin main --rebase || git pull origin main --allow-unrelated-histories
+        
         # Push to repository using GITHUB_TOKEN
         git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
         git push origin main
